@@ -7,6 +7,7 @@
  * Fixed limitation: Code Completion module list in import declarations now shows the module's DDoc.
  * Documentation: added entry in UserGuide#Eclipse_basics about Eclipse memory settings optimization.
  * Fixed/Implemented issue #10: Compiler installation search in preferences page.
+ * Cleanup: Code Completion now shows no results if invoked after float token ending in a dot. 
 
 == DDT 0.8.0 (2013-08-30) ==
  * Updated DDT to latest version of DLTK (version 5.0, from Eclipse Kepler).
